--- a/static/styles.css
+++ b/static/styles.css
@@ -53,6 +53,10 @@ input {
     color: #666;
 }
 
+#quote-api-container {
+    margin-bottom: 100px;
+}
+
 #add-quote-form {
     width: 100%;
     display: flex;
@@ -67,16 +71,12 @@ input {
 
 #add-quote-form input, #add-quote-button {
     margin-bottom: 10px; 
-    width: 100%; 
+    width: 90%; 
 }
 
 #add-quote-button {
     width: auto;
     align-self: flex-start; 
-}
-
-#add-quote-button {
-    width: 20%;
 }
 
 #quotes-list, #mailing {
@@ -112,7 +112,6 @@ input {
 
 #sort-by-author, #sort-by-category {
     margin-right: 50px;
-
 }
 
 #send-quote-to-email {
